<resources>
    <string name="app_name">NMedia</string>
    <string name="main_text">NMedia!</string>
    <string name="avatar">avatar</string>
    <string name="menu">menu</string>
    <string name="likes">likes</string>
    <string name="share">share</string>
    <string name="view">view</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post text</string>
    <string name="description_post_save">save</string>
    <string name="error_empty_content">text cannot be null or empty</string>
    <string name="menu_edit">Edit post</string>
    <string name="edit_message">Edit Message</string>
    <string name="description_edit_cancel">edit cancel</string>
    <string name="description_pencil">pencil</string>
    <string name="edit_text">editable text</string>
    <string name="chooser_share">Choose application for share</string>
    <string name="add_new_post">Add new post</string>
    <string name="video">Video</string>
    <string name="play_video">Play video</string>
    <string name="google_play_unavailable">Google Api unavailable</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_new_post">%1$s create new post:</string>
    <string name="empty_text">There are no posts.\\nIf you create a new post, it will appear here</string>
    <string name="retry_loading">Retry</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="attachments">Attachments</string>
    <string name="new_posts">Fresh posts</string>
</resources>